--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head><meta charset="utf-8"><title>Práctica Fork & PR</title></head>
 <body>
-  <h1>Bienvenido</h1>
+  <h1>Bienvenido, esta es la nueva versión del repositorio. </h1>
   <p>Este sitio es para practicar forks y pull requests.</p>
 </body>
 </html>
