--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!doctype html>
 <html lang="es">
-<head><meta charset="utf-8"><title>Práctica Fork & PR</title></head>
+<head><meta charset="utf-8"><title>Fork. Omar Laamri Durán</title></head>
 <body>
   <h1>Bienvenido, esta es la nueva versión del repositorio. </h1>
   <p>Este sitio es para practicar forks y pull requests.</p>
+<section>
+  <h2>Créditos</h2>
+  <ul>
+    <li>Autor original: @TU-COMPI</li>
+    <li>Mejoras: @TU-USUARIO</li>
+  </ul>
+</section>
+
 </body>
 </html>
